samples/dashboards/demo/election/demo.css
/* ... */
#election-grid .highcharts-datagrid-row[data-row-index="0"] .highcharts-datagrid-cell:nth-child(3),
#election-grid .highcharts-datagrid-row[data-row-index="0"] .highcharts-datagrid-cell:nth-child(5) {
    background-color: var(--highcharts-color-1-light);
}

.highcharts-datagrid-row {
    background-color: #fff;
}

.highcharts-datagrid-row:nth-child(even) {
    background-color: #f2f2f2;
}

#election-grid .highcharts-datagrid-row.hovered,
#election-grid .highcharts-datagrid-row.hovered .highcharts-datagrid-cell {
    background-color: #e6e6e6;
    color: #000;
}

/* Capitalize state names (first column) */
#election-grid .highcharts-datagrid-cell:nth-child(1) {
    text-transform: capitalize;
}

/* Candidate votes columns */
#election-grid .highcharts-datagrid-cell:nth-child(4),
#election-grid .highcharts-datagrid-cell:nth-child(5) {
    min-width: 70px;
}

/* Total votes column */
#election-grid .highcharts-datagrid-cell:nth-child(6) {
    min-width: 100px;
}

/* Safari fix for manual dark mode */
/* stylelint-disable-next-line max-line-length */
.highcharts-dark #election-map .highcharts-series-1 .highcharts-data-label text {
    paint-order: stroke;
    stroke-width: 2px;
}

/* Dashboards layout */

/* LARGE */
@media (max-width: 1200px) {
    #html-result,
    #html-control,
    #election-map,
    #election-chart,
    #election-charts {
        flex: 1 1 50%;
    }

    #election-grid {
        flex: 1 1 100%;
    }

    #html-control-div #election-description {
        padding-right: 0;
    }

    #html-control-div #election-description-container h1 {
        font-size: 2em;
    }
}

/* MEDIUM */
@media (max-width: 992px) {
    .row {
        flex-direction: column;
    }

    #html-result,
    #html-control,
    #election-map,
    #election-chart,
    #election-grid,
    #election-charts,
    #elections-selector-wrapper select {
        flex: unset;
        width: 100%;
    }

    #election-grid .highcharts-datagrid-cell {
        font-size: 14px;
        padding-left: 5px;
    }

    #html-control-div #election-description-container {
        flex-direction: column;
    }

    #html-control-div #election-description-container h1,
    #html-control-div #election-description {
        width: 100%;
        padding: 0;
        margin: 0;
        border: none;
    }

    #html-control-div #election-description-container h1 {
        text-align: left;
        margin-bottom: 15px;
    }

    #html-control-div {
        padding: 0;
    }

    #election-map {
        height: 600px;
    }

    #election-chart-national h2,
    #election-grid .highcharts-datagrid-column-header:nth-child(4),
    #election-grid .highcharts-datagrid-column-header:nth-child(5),
    #election-grid .highcharts-datagrid-column-header:nth-child(6),
    #election-grid .highcharts-datagrid-cell:nth-child(4),
    #election-grid .highcharts-datagrid-cell:nth-child(5),
    #election-grid .highcharts-datagrid-cell:nth-child(6) {
        display: none;
    }
}

/* SMALL */
@media (max-width: 576px) {
    #html-result,
    #html-control,
    #election-map,
    #election-chart,
    #election-grid {
        flex: unset;
        width: 100%;
    }

    #election-map {
        height: 400px;
    }

    #info-dem1,
    #info-rep1 {
        font-size: 12px;
    }

    #info-dem1 b,
    #info-rep1 b {
        font-size: 12px;
    }

    #info-dem2,
    #info-rep2 {
        font-size: 10px;
    }

    #info-dem2 {
        margin-left: -20px;
    }

    #info-rep2 {
        margin-right: -20px;
    }

    #info-to-win {
        padding: 0;
        font-size: 12px;
    }

    #election-grid .highcharts-datagrid-cell {
        font-size: 12px;
        padding-left: 3px;
    }

    #election-chart-national .highcharts-data-label {
        font-size: 0.5em;
    }

    #election-chart-national .highcharts-axis-labels {
        font-size: 0.9em;
    }

    #html-control-div #election-description {
        text-align: justify;
    }

    #html-control-div #election-description-container h1 {
        font-size: 18px;
    }
}

